# cpt_mwd_project

./: .gitignore  README.md  pyproject.toml
data/1_source/: CPT-en-Drilling-01.csv  mwd_2b.csv
data/2_clean/: CPT_clean.csv  clean_mwd_2b.csv  merged_cpt_mwd.csv
data/3_processed/: processed_cpt_mwd.csv  processed_cpt_mwd_with_fs_sqrt.csv  processed_cpt_mwd_with_new_features.csv  processed_cpt_mwd_with_outlier_flags.csv
data/4_predictions/: processed_cpt_mwd_with_predictions.csv  processed_cpt_mwd_with_predictions_trainTestSplitRandom.csv
model/: 10_feature_engineering.py  11-1_prediction_model.py  11-2_prediction_model_trainTestSplitRandom.py  12-1_prediction_model.py  12-2_prediction_model_trainTestSplitRandom.py  13_speed_test.py  1_clean_cpt_data.py  2_inspect_mwd_dataset.py  3_clean_mwd_2b.py  4_overlapcontrole.py  5_merge_cpt_mwd.py  6_eda_basics.py  7_eda_distributions.py  8_eda_outliers_analysis.py  9_eda_depth_eda_correlations.py  EXTRA_SHAP_feature_importance.py  EXTRA_speed_test.py
src/mads_research_royal_eijkelkamp/: __init__.py
