[project]
name = "mads-research-royal-eijkelkamp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "NReinders", email = "nr.reinders@student.han.nl" }
]
dependencies = [
    "pandas>=2.2.3",
    "numpy>=2.2.4",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.1",
    "scipy>=1.15.2",
    "scikit-learn>=1.6.1",
    "ipykernel>=6.29.5",
    "xgboost>=3.0.1",
    "shap>=0.47.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mads_research_royal_eijkelkamp"]
